Change baseurl and add chinese version

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,6 +40,31 @@
 {{ end }}
 <!-- /cta -->
 
+<!-- cta2 -->
+{{ if .Site.Params.cta2.enable }}
+<section class="section pt-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 mx-auto">
+        <div class="row shadow bg-white p-5">
+          <div class="col-md-4 text-center text-md-left mb-4 mb-lg-0">
+            <img src="{{ .Site.Params.cta2.image | relURL }}" class="mr-4" alt="..."></div>
+          <div class="col-md-8 text-center text-md-left">
+            <h3 class="mt-0">{{ .Site.Params.cta2.title | markdownify }}</h3>
+            <p>{{ .Site.Params.cta2.description | markdownify }}</p>
+            {{ if .Site.Params.cta2.button.enable }}
+            <a href="{{ .Site.Params.cta2.button.link | absURL }}"
+              class="btn btn-primary">{{ .Site.Params.cta2.button.label }}</a>
+            {{ end }}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+{{ end }}
+<!-- /cta2 -->
+
 
 
 {{ end }}
