--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,8 +4,10 @@
 <section class="banner bg-cover" style="background-image: url('{{ .Site.Params.banner.bgImage | relURL }}');">
   <div class="container">
     <div class="row">
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <h1>{{ .Site.Params.banner.title | markdownify }}</h1>
+      </div>
       <div class="col-lg-6 illustration-mobile">
-        <img src="{{ .Site.Params.banner.image | relURL }}" class="img-fluid" alt="">
       </div>
     </div>
   </div>
