--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,7 @@
       <div class="col-lg-8 mx-auto px-0">
         <h2 class="mb-4">Posts are showing from <span class="text-primary">{{ .Title }}</span> categories</h2>
         <div class="bg-white shadow block">
-          {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+          {{ $paginator := .Paginate (where .Data.Pages "Type" "about") }}
           {{ range $paginator.Pages }}
           <article class="mb-5">
             <h2 class="h4"><a class="text-dark" href="{{ .Permalink }}">{{ .Title | markdownify }}</a></h2>
