--- a/layouts/blogs/list.html
+++ b/layouts/blogs/list.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto px-0">
-        <h2 class="mb-4">Posts are showing from <span class="text-primary">{{ .Title }}</span> categories</h2>
+        <h2 class="mb-4"><span class="text-primary"><center>{{ .Title }}</center></span></h2>
         <div class="bg-white shadow block">
           {{ $paginator := .Paginate (where .Data.Pages "Type" "blogs") }}
           {{ range $paginator.Pages }}
